@@ -4,6 +4,10 @@
 	to locate handler token fails. Happens when some other
 	thread attempts to delete somebody else's token.
 
+	Also, panic early if we find out the wrong thread attempting
+	to delete the async handler (common trap). As, only the one
+	that created the handler is allowed to delete it.
+
 2008-04-24  Andreas Kupries  <andreask@activestate.com>
 
 	* tests/ioCmd.test: Extended testsuite for reflected channel
